additional initial commit

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import "src/styles/abstract/constants";
+@import "src/styles/abstract/mixins";
+@import "src/styles/abstract/placeholder";
+@import "styles/base/base";
+
+body {
+  margin: 0;
+}
+
+* {
+  margin: 0;
+  margin-block: 0;
+  box-sizing: content-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
