feat: create flat draft form

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
-@import "src/styles/abstract/constants";
-@import "src/styles/abstract/mixins";
-@import "src/styles/abstract/placeholder";
-@import "styles/base/base";
+@import "src/assets/styles/abstract/constants";
+@import "src/assets/styles/abstract/mixins";
+@import "src/assets/styles/abstract/placeholder";
+@import "assets/styles/base/base";
 
 body {
   margin: 0;
