--- a/src/app/UI/vehicle/main-form/main-form.component.html
+++ b/src/app/UI/vehicle/main-form/main-form.component.html
@@ -1,5 +1,5 @@
 <div class="grid md:grid-cols-2">
-  <form [formGroup]="vehicleForm" (ngSubmit)="onSubmit() " class="p-8">
+  <form [formGroup]="vehicleFormGroup" (ngSubmit)="onSubmit() " class="p-8">
 
     <h2 class="text-xl font-bold text-blue-500">Voertuiginformatie opzoeken</h2>
 
@@ -36,7 +36,8 @@
       <!-- INPUT LICENSE PLATE formattingLicencePlate -->
       <label class="block mt-4">
         <span class="text-gray-700">Vul het kenteken van uw [auto/motor/brommer] in.</span>
-        <input formControlName="formattingLicencePlate" type="text"
+        <input formControlName="formattingLicencePlate" type="text" [(ngModel)]="licencePlate"
+          (input)="onChangeFormatting()"
           class="mt-1 block w-full rounded-md bg-yellow-400 border-red-400 focus:border-gray-500 focus:bg-yellow-300 focus:ring-0"
           name="formatting-licence-plate" placeholder="Bijvoorbeeld AA-BB-12">
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
@@ -60,7 +61,7 @@
     </div>
 
     <div>
-      <button type="submit" [disabled]="!vehicleForm.valid">Submit</button>
+      <button type="submit" [disabled]="!vehicleFormGroup.valid">Submit</button>
     </div>
 
 
