--- a/src/app/UI/vehicle/main-form/main-form.component.html
+++ b/src/app/UI/vehicle/main-form/main-form.component.html
@@ -11,7 +11,8 @@
       <!-- SELECT VEHICLE TYPE-->
       <label class="block mt-4">
         <span class="text-gray-700">Van welk type voertuig wilt u voertuiginformatie opzoeken?</span>
-        <select formControlName="vehicleType" id="vehicleType" #vehicleType (change)="onChange(vehicleType.value)"
+        <select formControlName="vehicleType" id="vehicleType" #vehicleType
+          (change)="onChangeVehicleType(vehicleType.value)"
           class="block w-full mt-1 rounded-md bg-gray-100 border-transparent focus:border-gray-500 focus:bg-white focus:ring-0"
           name="vehicle-type">
           <option>Auto</option>
@@ -60,9 +61,9 @@
           wx12nz
           g241gh {{isLicencePlateValid}}</p>
 
-        <!-- <input formControlName="validatingLicencePlate" type="text" (input)="onChangeValidating($event)"
+        <input formControlName="validatingLicencePlate" type="text" id="IdLp" (input)="onChangeValidating($event)"
           class="mt-1 block w-full rounded-md bg-yellow-400 border-red-400 focus:border-gray-500 focus:bg-yellow-300 focus:ring-0"
-          name="validating-licence-plate" placeholder="Bijvoorbeeld 1234"> -->
+          name="validating-licence-plate" placeholder="Bijvoorbeeld 1234">
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert"
           *ngIf="!isLicencePlateValid">
           <div class="font-bold">Helaas is het ingevoerde kenteken niet geldig. Probeer het opnieuw.</div>
